@@ -4,6 +4,7 @@ from __future__ import absolute_import, unicode_literals
 
 import json
 
+from django.core.serializers.json import DjangoJSONEncoder
 from django.utils.encoding import force_bytes, force_text
 
 from .base import BaseSerializer
@@ -11,7 +12,7 @@ from .base import BaseSerializer
 
 class JSONSerializer(BaseSerializer):
     def dumps(self, value):
-        return force_bytes(json.dumps(value))
+        return force_bytes(json.dumps(value, cls=DjangoJSONEncoder))
 
     def loads(self, value):
         return json.loads(force_text(value))
